--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/tododb
 spring.datasource.username=todouser
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8080 
 spring.security.user.name=admin
